# dews

code/: CMakeLists.txt
code/dews/: CMakeLists.txt
code/dews-tests/: CMakeLists.txt
code/dews-tests/src/: ut.cpp
code/dews/inc/: dews-prereq.hpp  dews-types.hpp  dews.hpp  dewsbreaker.hpp  dewsbuilder.hpp  dewsclass.hpp  zigzag.hpp
code/dews/src/: dewsbreaker.cpp  dewsbuilder.cpp  dewsclass.cpp
